# python-template

./: .editorconfig  .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
