[tool.poetry]
name = "python-template"
version = "0.0.0"
description = "A simple python template"
authors = ["Duong Vinh <tienvinh.duong4@gmail.com>"]

[tool.poe.tasks]
dev = "python app.py"
lint = "flake8"
"sort_import" = "isort ."
pretty = "black ."

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.9"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.14.0"
black = {version = "^22.3.0", allow-prereleases = true}
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
